--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 *.pyc
-ECS-ELITE_1_C-1/10000 ECS-ELITE_1_C-1/10010 ECS-ELITE_1_C-1/11000 ECS-ELITE_1_C-1/11001 ECS-ELITE_1_C-1/11002 ECS-ELITE_1_C-1/12000 ECS-ELITE_1_C-1/12010 ECS-ELITE_1_C-1/13003 ECS-ELITE_1_C-1/20000 ECS-ELITE_1_C-1/21000 ECS-ELITE_1_C-1/24000 ECS-ELITE_1_C-1/27000 ECS-ELITE_1_C-1/30092 ECS-ELITE_1_C-1/50200 ECS-ELITE_1_C-1/50300 ECS-ELITE_1_C-1/50500 ECS-ELITE_1_C-1/51000 ECS-ELITE_1_C-1/55000 ECS-ELITE_1_C-1/66000 ECS-ELITE_1_C-1/70011 ECS-ELITE_1_C-1/71700 ECS-ELITE_1_C-1/71900 ECS-ELITE_1_C-1/71b00 ECS-ELITE_1_C-1/74000 ECS-ELITE_1_C-1/74010 ECS-ELITE_1_C-1/74100 ECS-ELITE_1_C-1/74300 ECS-ELITE_1_C-1/76000 ECS-ELITE_1_C-1/90000 ECS-ELITE_1_C-1/92000 ECS-ELITE_1_C-1/93000
+ECS-ELITE_1_C-1/*
 ECS-ELITE_1_C-1/
+ui_*.py
